# HexMex

./: .gitignore  hexes.py  inVerify.py  palette.py  pyproject.toml  randoz.py
src/hexmex/: hexes.py  main.py  notSoRandoz.py  palette.py  phlips.py  util.py
