[project]
name = "hexmex"
version = "0.1.0"
description = ""
authors = [
    {name = "billyZduke",email = "billyzduke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pylette (>=4.0.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hexmex", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
